<resources>
    <string name="app_name">EkszerBolt projekt</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">Email cím</string>
    <string name="password_again">Jelszó újra</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="smile">:)</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="item_placeholder">Leírás</string>
    <string name="search">Search</string>
    <string name="logOut">Kijelentkeztés</string>
    <string name="settings">Beállítások</string>
    <string name="cart">Kosár</string>
    <string name="nincs_talalat">Nincs találat.</string>


    <string-array name="shopping_item_names">
        <item>Férfi arany karkötő</item>
        <item>Női óra</item>
        <item>Férfi óra</item>
        <item>Oled TV</item>
        <item>Az elegancia, a városi stílus és a mechanikai kifinomultság harmonikus összhangja. Minden egyes alkotás svájci kézműves technikával készült, tükrözve a Maurice Lacroix tervezői képességeit, valamint magas értéket képvisel.</item>
        <item>Az EBEL márka középpontjában 1911 óta az innováció és a kiváló óratervezés iránti szenvedély áll. Ma az EBEL folytatja az innováció és a zsenialitás útját, és olyan luxusórákat hoz létre, amelyekkel a kifinomult Hölgyek minden pillanatban az elegancia nagyköveteivé válhatnak</item>
        <item>Longines Master Collection: Amikor a hosszú évek tapasztalata tekintélyes szakértelemmel párosul. A Longines mesterien kivitelezett kollekciója minden mechanikus óra rajongó álma.</item>
        <item>Az Al Coro márkát a kézművesség, a színek és formák iránti lenyűgöző érzék és az ékszerek világának új trendjei iránti csalhatatlan ösztön jellemzi. E mögött nemcsak a finom ékszerek és a generációkon átörökített hagyományok iránti tisztelet áll, hanem egy családi manufaktúra tapasztalata is.</item>
        <item>AU84690 - Méret: 59</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Fekete betétes bicolor férfi arany karkötő</item>
        <item>Bering Classic Solar női karóra</item>
        <item>Longines Conquest Chrono Ski Edition</item>
        <item>Maurice Lacroix AIKON Automatic Wotto Limited Edition</item>
        <item>Maurice Lacroix Masterpiece Skeleton X Label Noir</item>
        <item>EBEL Sport Classic (33,0 mm)</item>
        <item>The Longines Master Collection Chrono Moonphase</item>
        <item>AL CORO női gyűrű</item>
        <item>14 karátos női arany gyűrű</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>1.5</item>
        <item>5</item>
        <item>3</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/ferfi_karkoto</item>
        <item>@drawable/noi_ora</item>
        <item>@drawable/ferfi_ora</item>
        <item>@drawable/maurice_lacroix</item>
        <item>@drawable/maurice_lacroix_masterpiece_skeleton</item>
        <item>@drawable/ebelsportclassic</item>
        <item>@drawable/oram</item>
        <item>@drawable/alcoro_noi</item>
        <item>@drawable/a14karanynao</item>
    </array>

    <array name="shopping_item_price">
        <item>100.000 Ft</item>
        <item>75.990 Ft</item>
        <item>1.720.000 Ft</item>
        <item>1.496.000 Ft</item>
        <item>3.234.000 Ft</item>
        <item>1.840.000 Ft</item>
        <item>1.368.950 Ft</item>
        <item>1.713.500 Ft</item>
        <item>116 720 Ft</item>
    </array>

</resources>