<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/shopping_cart"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_menu_item"/>
    <item
        android:id="@+id/setting_button"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/log_outButton"
        android:title="@string/logOut"
        app:showAsAction="never"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/sort_by_price"
        android:title="Ár szerint növekvő"
        app:showAsAction="never"
        android:orderInCategory="3"/>
</menu>





